--- a/index.html
+++ b/index.html
@@ -1,4 +1,83 @@
-<section id="new-feature">
-    <h2>Our New Feature</h2>
-    <p>This is a new section added to the homepage to showcase our latest feature.</p>
+<!Doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Application - Resume</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+        }
+        h1, h2 {
+            margin-bottom: 10px;
+        }
+        .section {
+            margin-bottom: 20px;
+        }
+        .section h2 {
+            border-bottom: 1px solid #ccc;
+            padding-bottom: 5px;
+        }
+        .section ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        .section ul li {
+            margin-bottom: 5px;
+        }
+    </style>
+
+</head>
+<body>
+    <header>
+        <h1>Navarro Lance</h1>
+        <p>Email: NavarroLance30@example.com | Phone: (123) 456-7890 | LinkedIn: linkedin.com/yourprofile</p>
+    </header>
+
+<section class="section">
+
+    <h2><Summary><h2>
+    <p>Good Team Leader, Good in Verbal Communications Good Attitude</p>
 </section>
+
+
+<section class="section">
+    <h2>Education</h2>
+    <ul>
+        <li><strong>BS COMPUTER SCIENCES</strong> - PALAWAN STATE UNIVERSITY, 2024-21-05</li>
+        <li><strong>Additional Education</strong> - Institution Name, Graduation Year (if applicable)</li>
+    </ul>
+</section>
+
+<section class="section">
+    <h2>Management Facilitated weekly stakeholder meetings, ensuring transparent communication and alignment on project goals, which led to a 95% client satisfaction rate.</h2>
+    <ul>
+        <li>
+            <strong>IT Project Manager</strong><br>
+            <em>Microsoft Corporation - Baltan Street</em><br>
+            <span>05-21-2024 - 01-27-2027 Date</span><br>
+            <ul>
+                <li>Mentored team members, two of whom were promoted to senior roles within the department.</li>
+            </ul>
+        </li>
+        <!-- Repeat for each job experience -->
+    </ul>
+</section>
+
+<section class="section">
+    <h2>Skills</h2>
+    <ul>
+        <li>Project Planning: Successfully managed a $1M budget project from initiation to completion, ensuring all milestones were met on time.</li>
+        <li>Risk Management: Implemented a risk mitigation plan that prevented potential delays in a high-profile project</li>
+        <li>Resource Allocation: Optimized resource allocation across multiple projects, reducing costs by 15% while maintaining quality.</li>
+        <!-- Add more skills as needed -->
+    </ul>
+</section>
+
+<footer>
+    <p>References available upon request</p>
+</footer>
+</body>s
+</html>
